# mylib

./: CMakeLists.txt  README.md  main.c
src/: str.h
tests/: str_h_tests.cpp
